--- a/index.htm
+++ b/index.htm
@@ -2,10 +2,10 @@
 <html lang="en-US"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-<meta name="description" content="Koibu and Regalgoblins HQ. D&amp;D / RPG VODs, Tools, and Community">
-<meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons, Rollplay, Misscliks, DwD, Dicing with Death, Hardcore Heroes, Frozen Frontier, Akuban Knights, Arcadia, AoS, Age of Strife">
-<meta name="author" content="Neal Erickson">
-<link rel="shortcut icon" href="https://regalgoblins.com/images/favicon.ico">
+<meta name="description" content="Vilify 2e spell content credit to Koibu">
+<meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
+<meta name="author" content="Kenneth Elliott w/ Credit to: Neal Erickson aka Koibu">
+<link rel="shortcut icon" href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 <script async="" src="index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -42,86 +42,82 @@
 			<div class="illusion"><header>Illusion/Phantasm</header></div>
 			<div class="alteration"><header>Alteration/Transmutation</header></div>
 			<div class="divination"><header>Divination</header></div>
-			<form method="POST" action="https://regalgoblins.com" style="float:right;">
-				<input class="password" name="dmpassword" type="password">
-				<input type="submit" value="submit" style="display:none;">
-			</form>
 		</div>
 		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
 			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Abjurer.htm">Abjurer</a>
 			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Conjurer.htm">Conjurer</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Diviner.htm">Diviner</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Enchanter.htm">Enchanter</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Illusionist.htm">Illusionist</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Invoker.htm">Invoker</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Necromancer.htm">Necromancer</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Transmuter.htm">Transmuter</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Diviner.htm">Diviner</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Enchanter.htm">Enchanter</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Illusionist.htm">Illusionist</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Invoker.htm">Invoker</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Necromancer.htm">Necromancer</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Transmuter.htm">Transmuter</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="https://vilify-13.github.io/Wizard/School/Abjuration.htm">Abjuration</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Alteration.htm">Alteration</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Divination.htm">Divination</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Enchantment.htm">Enchantment/Charm</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Evocation.htm">Invocation/Evocation</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Illusion.htm">Illusion/Phantasm</a>
-			<a href="https://vilify-13.github.io/Wizard/School/Necromancy.htm">Necromancy</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Abjuration.htm">Abjuration</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Alteration.htm">Alteration</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Divination.htm">Divination</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Enchantment.htm">Enchantment/Charm</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Evocation.htm">Invocation/Evocation</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Illusion.htm">Illusion/Phantasm</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Priest/All_Priest.htm">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="https://vilify-13.github.io/Priest/Sphere/All.htm">All</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Animal.htm">Animal</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Astral.htm">Astral</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Chaos.htm">Chaos</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Charm.htm">Charm</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Combat.htm">Combat</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Creation.htm">Creation</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Divination.htm">Divination</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Guardian.htm">Guardian</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Healing.htm">Healing</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Law.htm">Law</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Necromantic.htm">Necromantic</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Numbers.htm">Numbers</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Plant.htm">Plant</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Protection.htm">Protection</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Summoning.htm">Summoning</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Sun.htm">Sun</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Thought.htm">Thought</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Time.htm">Time</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Travelers.htm">Travelers</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/War.htm">War</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Wards.htm">Wards</a>
-				<a href="https://vilify-13.github.io/Priest/Sphere/Weather.htm">Weather</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/All.htm">All</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Animal.htm">Animal</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Astral.htm">Astral</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Chaos.htm">Chaos</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Charm.htm">Charm</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Combat.htm">Combat</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Creation.htm">Creation</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Divination.htm">Divination</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Guardian.htm">Guardian</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Healing.htm">Healing</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Law.htm">Law</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Necromantic.htm">Necromantic</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Numbers.htm">Numbers</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Plant.htm">Plant</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Protection.htm">Protection</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Summoning.htm">Summoning</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Sun.htm">Sun</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Thought.htm">Thought</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Time.htm">Time</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Travelers.htm">Travelers</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/War.htm">War</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Wards.htm">Wards</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="https://vilify-13.github.io/Priest/Deity/Arstor.htm">Arstor</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Karah.htm">Karah</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Runath.htm">Runath</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Devras.htm">Devras</a> | 
-				<a href="https://vilify-13.github.io/Priest/Deity/Ako.htm">Ako</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Ephra.htm">Ephra</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Ralah.htm">Ralah</a> | 
-				<a href="https://vilify-13.github.io/Priest/Deity/Lumnis.htm">Lumnis</a>
-				<a href="https://vilify-13.github.io/Priest/Deity/Sartanis.htm">Sartanis</a> | 
-				<a href="https://vilify-13.github.io/Priest/Deity/Ampharae.htm">Ampharae</a>
-				<a href="https://regalgoblins.com/spells.php?player=Aaris">Taaris</a>
-				<a href="https://regalgoblins.com/spells.php?player=Bellum">Thugal</a>
-				<a href="https://regalgoblins.com/spells.php?player=Dorbaff%20/%20Guam">Ultarius / Yttria</a>
-				<a href="https://regalgoblins.com/spells.php?player=Jexel">Unlo</a>
-				<a href="https://regalgoblins.com/spells.php?player=Matrigal">Natrea</a>
-				<a href="https://regalgoblins.com/spells.php?player=Quantarious">Koze</a>
-				<a href="https://regalgoblins.com/spells.php?player=Reluna">Thera</a>
-				<a href="https://regalgoblins.com/spells.php?player=Sayor">Joram</a>
-				<a href="https://regalgoblins.com/spells.php?player=Solt">Nilmatar</a>
-				<a href="https://regalgoblins.com/spells.php?player=Terrasa">Laerissa</a>
-				<a href="https://regalgoblins.com/spells.php?player=Velmontarious">Hequa</a>
-				<a href="https://regalgoblins.com/spells.php?player=Velthara">Darmeth</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Arstor.htm">Arstor</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Karah.htm">Karah</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Runath.htm">Runath</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Devras.htm">Devras</a> | 
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ako.htm">Ako</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ephra.htm">Ephra</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ralah.htm">Ralah</a> | 
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Lumnis.htm">Lumnis</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Sartanis.htm">Sartanis</a> | 
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ampharae.htm">Ampharae</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Taaris.htm">Taaris</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Thugal.htm">Thugal</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ultarius-Yttria.htm">Ultarius / Yttria</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Unlo.htm">Unlo</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Natrea.htm">Natrea</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Koze.htm">Koze</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Thera.htm">Thera</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Joram.htm">Joram</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Nilmatar.htm">Nilmatar</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Laerissa.htm">Laerissa</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Hequa.htm">Hequa</a>
+				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Darmeth.htm">Darmeth</a>
 	</div></header>
 	<div data-id="21" class="card alteration" data-school="Alteration" data-caster="wizard">
 		<header class="clearfix">
