--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <meta name="author" content="Kenneth Elliott w/ Credit to: Neal Erickson aka Koibu">
 <link rel="shortcut icon" href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-<script async="" src="index_files/analytics.js"></script><script> // Google Analytics Tracking
+<script async="" src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
