--- a/index.htm
+++ b/index.htm
@@ -42,6 +42,10 @@
 			<div class="illusion"><header>Illusion/Phantasm</header></div>
 			<div class="alteration"><header>Alteration/Transmutation</header></div>
 			<div class="divination"><header>Divination</header></div>
+			<form method="POST" action="https://regalgoblins.com" style="float:right;">
+				<input class="password" name="dmpassword" type="password">
+				<input type="submit" value="submit" style="display:none;">
+			</form>
 		</div>
 		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
