--- a/index.htm
+++ b/index.htm
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="description" content="Vilify 2e spell content credit to Koibu">
 <meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
-<meta name="author" content="Kenneth Elliott w/ Credit to: Neal Erickson aka Koibu">
-<link rel="shortcut icon" href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/hemlocksmadge.ico">
+<meta name="author" content="Neal Erickson, edits made by Kenneth Elliott aka Vilify">
+<link rel="shortcut icon" href="/hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-<script async="" src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/analytics.js"></script><script> // Google Analytics Tracking
+<script async="" src="/index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,9 +16,9 @@
   ga('create', 'UA-80475120-1', 'auto');
   ga('send', 'pageview');
 </script> 
-<script src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/jquery-3.0.0.min.js"></script>
+<script src="/index_files/jquery-3.0.0.min.js"></script>
 <!-- <script src="/scripts/twitch.js"></script> For the Streambadge but creates too much work for the server (somehow)-->
-	<link href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/spells.css" type="text/css" rel="stylesheet">
+	<link href="/index_files/spells.css" type="text/css" rel="stylesheet">
 	<style type="text/css" media="print">
 		#description-content {
 		  overflow: hidden;
@@ -27,7 +27,7 @@
 			 display:none;
 		 }
 	</style>
-	<script src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/clipboard.js"></script>
+	<script src="/index_files/clipboard.js"></script>
 	
 	<title>Spells List: AD&amp;D 2.n</title>
 </head>
