--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <meta name="description" content="Vilify 2e spell content credit to Koibu">
 <meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
 <meta name="author" content="Neal Erickson, edits made by Kenneth Elliott aka Vilify">
-<link rel="shortcut icon" href="/hemlocksmadge.ico">
+<link rel="shortcut icon" href="/vilify-13.github.io/hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 <script async="" src="/vilify-13.github.io/index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -42,10 +42,6 @@
 			<div class="illusion"><header>Illusion/Phantasm</header></div>
 			<div class="alteration"><header>Alteration/Transmutation</header></div>
 			<div class="divination"><header>Divination</header></div>
-			<form method="POST" action="https://regalgoblins.com" style="float:right;">
-				<input class="password" name="dmpassword" type="password">
-				<input type="submit" value="submit" style="display:none;">
-			</form>
 		</div>
 		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
