--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <meta name="description" content="Vilify 2e spell content credit to Koibu">
 <meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
 <meta name="author" content="Neal Erickson, edits made by Kenneth Elliott aka Vilify">
-<link rel="shortcut icon" href="/vilify-13.github.io/hemlocksmadge.ico">
+<link rel="shortcut icon" href="/Vilify-13.github.io/hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 <script async="" src="/vilify-13.github.io/index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -16,9 +16,9 @@
   ga('create', 'UA-80475120-1', 'auto');
   ga('send', 'pageview');
 </script> 
-<script src="/vilify-13.github.io/index_files/jquery-3.0.0.min.js"></script>
+<script src="/Vilify-13.github.io/index_files/jquery-3.0.0.min.js"></script>
 <!-- <script src="/scripts/twitch.js"></script> For the Streambadge but creates too much work for the server (somehow)-->
-	<link href="/vilify-13.github.io/index_files/spells.css" type="text/css" rel="stylesheet">
+	<link href="/Vilify-13.github.io/index_files/spells.css" type="text/css" rel="stylesheet">
 	<style type="text/css" media="print">
 		#description-content {
 		  overflow: hidden;
@@ -27,7 +27,7 @@
 			 display:none;
 		 }
 	</style>
-	<script src="/vilify-13.github.io/index_files/clipboard.js"></script>
+	<script src="/Vilify-13.github.io/index_files/clipboard.js"></script>
 	
 	<title>Spells List: AD&amp;D 2.n</title>
 </head>
