--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 	</style>
 	<script src="index_files/clipboard.js"></script>
 	
-	<title>Spells List: AD&amp;D 2e</title>
+	<title>Spells List: AD&amp;D 2e for Vathia</title>
 </head>
 <body>
 		<header id="menu">
@@ -42,7 +42,7 @@
 			<div class="illusion"><header>Illusion/Phantasm</header></div>
 			<div class="alteration"><header>Alteration/Transmutation</header></div>
 			<div class="divination"><header>Divination</header></div>
-			<form method="POST" action="https://regalgoblins.com" style="float:right;">
+			<form method="POST" action="https://Vilify-13.github.io" style="float:right;">
 				<input class="password" name="dmpassword" type="password">
 				<input type="submit" value="submit" style="display:none;">
 			</form>
