--- a/index.htm
+++ b/index.htm
@@ -47,81 +47,81 @@
 				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Abjurer.htm">Abjurer</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Conjurer.htm">Conjurer</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Diviner.htm">Diviner</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Enchanter.htm">Enchanter</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Illusionist.htm">Illusionist</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Invoker.htm">Invoker</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Necromancer.htm">Necromancer</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Transmuter.htm">Transmuter</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
+			<a href="Wizard/Specialization/Abjurer.htm">Abjurer</a>
+			<a href="Wizard/Specialization/Conjurer.htm">Conjurer</a>
+			<a href="Wizard/Specialization/Diviner.htm">Diviner</a>
+			<a href="Wizard/Specialization/Enchanter.htm">Enchanter</a>
+			<a href="Wizard/Specialization/Illusionist.htm">Illusionist</a>
+			<a href="Wizard/Specialization/Invoker.htm">Invoker</a>
+			<a href="Wizard/Specialization/Necromancer.htm">Necromancer</a>
+			<a href="Wizard/Specialization/Transmuter.htm">Transmuter</a>
+			<a href="Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Abjuration.htm">Abjuration</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Alteration.htm">Alteration</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Divination.htm">Divination</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Enchantment.htm">Enchantment/Charm</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Evocation.htm">Invocation/Evocation</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Illusion.htm">Illusion/Phantasm</a>
-			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/School/Necromancy.htm">Necromancy</a>
+			<a href="Wizard/School/Abjuration.htm">Abjuration</a>
+			<a href="Wizard/School/Alteration.htm">Alteration</a>
+			<a href="Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
+			<a href="Wizard/School/Divination.htm">Divination</a>
+			<a href="Wizard/School/Enchantment.htm">Enchantment/Charm</a>
+			<a href="Wizard/School/Evocation.htm">Invocation/Evocation</a>
+			<a href="Wizard/School/Illusion.htm">Illusion/Phantasm</a>
+			<a href="Wizard/School/Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/All_Priest.htm">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="Priest/All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/All.htm">All</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Animal.htm">Animal</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Astral.htm">Astral</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Chaos.htm">Chaos</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Charm.htm">Charm</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Combat.htm">Combat</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Creation.htm">Creation</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Divination.htm">Divination</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Guardian.htm">Guardian</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Healing.htm">Healing</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Law.htm">Law</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Necromantic.htm">Necromantic</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Numbers.htm">Numbers</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Plant.htm">Plant</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Protection.htm">Protection</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Summoning.htm">Summoning</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Sun.htm">Sun</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Thought.htm">Thought</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Time.htm">Time</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Travelers.htm">Travelers</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/War.htm">War</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Wards.htm">Wards</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Sphere/Weather.htm">Weather</a>
+				<a href="Priest/Sphere/All.htm">All</a>
+				<a href="Priest/Sphere/Animal.htm">Animal</a>
+				<a href="Priest/Sphere/Astral.htm">Astral</a>
+				<a href="Priest/Sphere/Chaos.htm">Chaos</a>
+				<a href="Priest/Sphere/Charm.htm">Charm</a>
+				<a href="Priest/Sphere/Combat.htm">Combat</a>
+				<a href="Priest/Sphere/Creation.htm">Creation</a>
+				<a href="Priest/Sphere/Divination.htm">Divination</a>
+				<a href="Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
+				<a href="Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
+				<a href="Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
+				<a href="Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
+				<a href="Priest/Sphere/Guardian.htm">Guardian</a>
+				<a href="Priest/Sphere/Healing.htm">Healing</a>
+				<a href="Priest/Sphere/Law.htm">Law</a>
+				<a href="Priest/Sphere/Necromantic.htm">Necromantic</a>
+				<a href="Priest/Sphere/Numbers.htm">Numbers</a>
+				<a href="Priest/Sphere/Plant.htm">Plant</a>
+				<a href="Priest/Sphere/Protection.htm">Protection</a>
+				<a href="Priest/Sphere/Summoning.htm">Summoning</a>
+				<a href="Priest/Sphere/Sun.htm">Sun</a>
+				<a href="Priest/Sphere/Thought.htm">Thought</a>
+				<a href="Priest/Sphere/Time.htm">Time</a>
+				<a href="Priest/Sphere/Travelers.htm">Travelers</a>
+				<a href="Priest/Sphere/War.htm">War</a>
+				<a href="Priest/Sphere/Wards.htm">Wards</a>
+				<a href="Priest/Sphere/Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Arstor.htm">Arstor</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Karah.htm">Karah</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Runath.htm">Runath</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Devras.htm">Devras</a> | 
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ako.htm">Ako</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ephra.htm">Ephra</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ralah.htm">Ralah</a> | 
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Lumnis.htm">Lumnis</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Sartanis.htm">Sartanis</a> | 
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ampharae.htm">Ampharae</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Taaris.htm">Taaris</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Thugal.htm">Thugal</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Ultarius-Yttria.htm">Ultarius / Yttria</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Unlo.htm">Unlo</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Natrea.htm">Natrea</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Koze.htm">Koze</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Thera.htm">Thera</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Joram.htm">Joram</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Nilmatar.htm">Nilmatar</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Laerissa.htm">Laerissa</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Hequa.htm">Hequa</a>
-				<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Priest/Deity/Darmeth.htm">Darmeth</a>
+				<a href="Priest/Deity/Arstor.htm">Arstor</a>
+				<a href="Priest/Deity/Karah.htm">Karah</a>
+				<a href="Priest/Deity/Runath.htm">Runath</a>
+				<a href="Priest/Deity/Devras.htm">Devras</a> | 
+				<a href="Priest/Deity/Ako.htm">Ako</a>
+				<a href="Priest/Deity/Ephra.htm">Ephra</a>
+				<a href="Priest/Deity/Ralah.htm">Ralah</a> | 
+				<a href="Priest/Deity/Lumnis.htm">Lumnis</a>
+				<a href="Priest/Deity/Sartanis.htm">Sartanis</a> | 
+				<a href="Priest/Deity/Ampharae.htm">Ampharae</a>
+				<a href="Priest/Deity/Taaris.htm">Taaris</a>
+				<a href="Priest/Deity/Thugal.htm">Thugal</a>
+				<a href="Priest/Deity/Ultarius-Yttria.htm">Ultarius / Yttria</a>
+				<a href="Priest/Deity/Unlo.htm">Unlo</a>
+				<a href="Priest/Deity/Natrea.htm">Natrea</a>
+				<a href="Priest/Deity/Koze.htm">Koze</a>
+				<a href="Priest/Deity/Thera.htm">Thera</a>
+				<a href="Priest/Deity/Joram.htm">Joram</a>
+				<a href="Priest/Deity/Nilmatar.htm">Nilmatar</a>
+				<a href="Priest/Deity/Laerissa.htm">Laerissa</a>
+				<a href="Priest/Deity/Hequa.htm">Hequa</a>
+				<a href="Priest/Deity/Darmeth.htm">Darmeth</a>
 	</div></header>
 	<div data-id="21" class="card alteration" data-school="Alteration" data-caster="wizard">
 		<header class="clearfix">
