--- a/Wizard/All_Wizard.htm
+++ b/Wizard/All_Wizard.htm
@@ -47,7 +47,7 @@
 				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="Wizard/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
 			<a href="Wizard/Specialization/Abjurer.htm">Abjurer</a>
 			<a href="Wizard/Specialization/Conjurer.htm">Conjurer</a>
