--- a/Wizard/All_Wizard.htm
+++ b/Wizard/All_Wizard.htm
@@ -5,9 +5,9 @@
 <meta name="description" content="Vilify 2e spell content credit to Koibu">
 <meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
 <meta name="author" content="Neal Erickson, edits made by Kenneth Elliott aka Vilify">
-<link rel="shortcut icon" href="/hemlocksmadge.ico">
+<link rel="shortcut icon" href="Vilify-13.github.io//hemlocksmadge.ico">
 <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-<script async="" src="index_files/analytics.js"></script><script> // Google Analytics Tracking
+<script async="" src="Vilify-13.github.io/index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,9 +16,9 @@
   ga('create', 'UA-80475120-1', 'auto');
   ga('send', 'pageview');
 </script> 
-<script src="index_files/jquery-3.0.0.min.js"></script>
+<script src="Vilify-13.github.io/index_files/jquery-3.0.0.min.js"></script>
 <!-- <script src="/scripts/twitch.js"></script> For the Streambadge but creates too much work for the server (somehow)-->
-	<link href="index_files/spells.css" type="text/css" rel="stylesheet">
+	<link href="Vilify-13.github.io/index_files/spells.css" type="text/css" rel="stylesheet">
 	<style type="text/css" media="print">
 		#description-content {
 		  overflow: hidden;
@@ -27,7 +27,7 @@
 			 display:none;
 		 }
 	</style>
-	<script src="index_files/clipboard.js"></script>
+	<script src="Vilify-13.github.io/index_files/clipboard.js"></script>
 	
 	<title>Spells List: AD&amp;D 2e for Vathia</title>
 </head>
