--- a/All_Wizard.htm
+++ b/All_Wizard.htm
@@ -47,81 +47,81 @@
 				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="All_Wizard.htm">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="Vilify-13.github.io/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="Wizard/Specialization/Abjurer.htm">Abjurer</a>
-			<a href="Wizard/Specialization/Conjurer.htm">Conjurer</a>
-			<a href="Wizard/Specialization/Diviner.htm">Diviner</a>
-			<a href="Wizard/Specialization/Enchanter.htm">Enchanter</a>
-			<a href="Wizard/Specialization/Illusionist.htm">Illusionist</a>
-			<a href="Wizard/Specialization/Invoker.htm">Invoker</a>
-			<a href="Wizard/Specialization/Necromancer.htm">Necromancer</a>
-			<a href="Wizard/Specialization/Transmuter.htm">Transmuter</a>
-			<a href="Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
+			<a href="Vilify-13.github.io/Abjurer.htm">Abjurer</a>
+			<a href="Vilify-13.github.io/Conjurer.htm">Conjurer</a>
+			<a href="Vilify-13.github.io/Diviner.htm">Diviner</a>
+			<a href="Vilify-13.github.io/Enchanter.htm">Enchanter</a>
+			<a href="Vilify-13.github.io/Illusionist.htm">Illusionist</a>
+			<a href="Vilify-13.github.io/Invoker.htm">Invoker</a>
+			<a href="Vilify-13.github.io/Necromancer.htm">Necromancer</a>
+			<a href="Vilify-13.github.io/Transmuter.htm">Transmuter</a>
+			<a href="Vilify-13.github.io/Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="Wizard/School/Abjuration.htm">Abjuration</a>
-			<a href="Wizard/School/Alteration.htm">Alteration</a>
-			<a href="Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
-			<a href="Wizard/School/Divination.htm">Divination</a>
-			<a href="Wizard/School/Enchantment.htm">Enchantment/Charm</a>
-			<a href="Wizard/School/Evocation.htm">Invocation/Evocation</a>
-			<a href="Wizard/School/Illusion.htm">Illusion/Phantasm</a>
-			<a href="Wizard/School/Necromancy.htm">Necromancy</a>
+			<a href="Vilify-13.github.io/Abjuration.htm">Abjuration</a>
+			<a href="Vilify-13.github.io/Alteration.htm">Alteration</a>
+			<a href="Vilify-13.github.io/Conjuration.htm">Conjuration/Summoning</a>
+			<a href="Vilify-13.github.io/Divination.htm">Divination</a>
+			<a href="Vilify-13.github.io/Enchantment.htm">Enchantment/Charm</a>
+			<a href="Vilify-13.github.io/Evocation.htm">Invocation/Evocation</a>
+			<a href="Vilify-13.github.io/Illusion.htm">Illusion/Phantasm</a>
+			<a href="Vilify-13.github.io/Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="Priest/All_Priest.htm">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="Vilify-13.github.io/All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="Priest/Sphere/All.htm">All</a>
-				<a href="Priest/Sphere/Animal.htm">Animal</a>
-				<a href="Priest/Sphere/Astral.htm">Astral</a>
-				<a href="Priest/Sphere/Chaos.htm">Chaos</a>
-				<a href="Priest/Sphere/Charm.htm">Charm</a>
-				<a href="Priest/Sphere/Combat.htm">Combat</a>
-				<a href="Priest/Sphere/Creation.htm">Creation</a>
-				<a href="Priest/Sphere/Divination.htm">Divination</a>
-				<a href="Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
-				<a href="Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
-				<a href="Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
-				<a href="Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
-				<a href="Priest/Sphere/Guardian.htm">Guardian</a>
-				<a href="Priest/Sphere/Healing.htm">Healing</a>
-				<a href="Priest/Sphere/Law.htm">Law</a>
-				<a href="Priest/Sphere/Necromantic.htm">Necromantic</a>
-				<a href="Priest/Sphere/Numbers.htm">Numbers</a>
-				<a href="Priest/Sphere/Plant.htm">Plant</a>
-				<a href="Priest/Sphere/Protection.htm">Protection</a>
-				<a href="Priest/Sphere/Summoning.htm">Summoning</a>
-				<a href="Priest/Sphere/Sun.htm">Sun</a>
-				<a href="Priest/Sphere/Thought.htm">Thought</a>
-				<a href="Priest/Sphere/Time.htm">Time</a>
-				<a href="Priest/Sphere/Travelers.htm">Travelers</a>
-				<a href="Priest/Sphere/War.htm">War</a>
-				<a href="Priest/Sphere/Wards.htm">Wards</a>
-				<a href="Priest/Sphere/Weather.htm">Weather</a>
+				<a href="Vilify-13.github.io/All.htm">All</a>
+				<a href="Vilify-13.github.io/Animal.htm">Animal</a>
+				<a href="Vilify-13.github.io/Astral.htm">Astral</a>
+				<a href="Vilify-13.github.io/Chaos.htm">Chaos</a>
+				<a href="Vilify-13.github.io/Charm.htm">Charm</a>
+				<a href="Vilify-13.github.io/Combat.htm">Combat</a>
+				<a href="Vilify-13.github.io/Creation.htm">Creation</a>
+				<a href="Vilify-13.github.io/Divination.htm">Divination</a>
+				<a href="Vilify-13.github.io/Elemental_Air.htm">Elemental Air</a>
+				<a href="Vilify-13.github.io/Elemental_Earth.htm">Elemental Earth</a>
+				<a href="Vilify-13.github.io/Elemental_Fire.htm">Elemental Fire</a>
+				<a href="Vilify-13.github.io/Elemental_Water.htm">Elemental Water</a>
+				<a href="Vilify-13.github.io/Guardian.htm">Guardian</a>
+				<a href="Vilify-13.github.io/Healing.htm">Healing</a>
+				<a href="Vilify-13.github.io/Law.htm">Law</a>
+				<a href="Vilify-13.github.io/Necromantic.htm">Necromantic</a>
+				<a href="Vilify-13.github.io/Numbers.htm">Numbers</a>
+				<a href="Vilify-13.github.io/Plant.htm">Plant</a>
+				<a href="Vilify-13.github.io/Protection.htm">Protection</a>
+				<a href="Vilify-13.github.io/Summoning.htm">Summoning</a>
+				<a href="Vilify-13.github.io/Sun.htm">Sun</a>
+				<a href="Vilify-13.github.io/Thought.htm">Thought</a>
+				<a href="Vilify-13.github.io/Time.htm">Time</a>
+				<a href="Vilify-13.github.io/Travelers.htm">Travelers</a>
+				<a href="Vilify-13.github.io/War.htm">War</a>
+				<a href="Vilify-13.github.io/Wards.htm">Wards</a>
+				<a href="Vilify-13.github.io/Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="Priest/Deity/Arstor.htm">Arstor</a>
-				<a href="Priest/Deity/Karah.htm">Karah</a>
-				<a href="Priest/Deity/Runath.htm">Runath</a>
-				<a href="Priest/Deity/Devras.htm">Devras</a> | 
-				<a href="Priest/Deity/Ako.htm">Ako</a>
-				<a href="Priest/Deity/Ephra.htm">Ephra</a>
-				<a href="Priest/Deity/Ralah.htm">Ralah</a> | 
-				<a href="Priest/Deity/Lumnis.htm">Lumnis</a>
-				<a href="Priest/Deity/Sartanis.htm">Sartanis</a> | 
-				<a href="Priest/Deity/Ampharae.htm">Ampharae</a>
-				<a href="Priest/Deity/Taaris.htm">Taaris</a>
-				<a href="Priest/Deity/Thugal.htm">Thugal</a>
-				<a href="Priest/Deity/Ultarius-Yttria.htm">Ultarius / Yttria</a>
-				<a href="Priest/Deity/Unlo.htm">Unlo</a>
-				<a href="Priest/Deity/Natrea.htm">Natrea</a>
-				<a href="Priest/Deity/Koze.htm">Koze</a>
-				<a href="Priest/Deity/Thera.htm">Thera</a>
-				<a href="Priest/Deity/Joram.htm">Joram</a>
-				<a href="Priest/Deity/Nilmatar.htm">Nilmatar</a>
-				<a href="Priest/Deity/Laerissa.htm">Laerissa</a>
-				<a href="Priest/Deity/Hequa.htm">Hequa</a>
-				<a href="Priest/Deity/Darmeth.htm">Darmeth</a>
+				<a href="Vilify-13.github.io/Arstor.htm">Arstor</a>
+				<a href="Vilify-13.github.io/Karah.htm">Karah</a>
+				<a href="Vilify-13.github.io/Runath.htm">Runath</a>
+				<a href="Vilify-13.github.io/Devras.htm">Devras</a> | 
+				<a href="Vilify-13.github.io/Ako.htm">Ako</a>
+				<a href="Vilify-13.github.io/Ephra.htm">Ephra</a>
+				<a href="Vilify-13.github.io/Ralah.htm">Ralah</a> | 
+				<a href="Vilify-13.github.io/Lumnis.htm">Lumnis</a>
+				<a href="Vilify-13.github.io/Sartanis.htm">Sartanis</a> | 
+				<a href="Vilify-13.github.io/Ampharae.htm">Ampharae</a>
+				<a href="Vilify-13.github.io/Taaris.htm">Taaris</a>
+				<a href="Vilify-13.github.io/Thugal.htm">Thugal</a>
+				<a href="Vilify-13.github.io/Ultarius-Yttria.htm">Ultarius / Yttria</a>
+				<a href="Vilify-13.github.io/Unlo.htm">Unlo</a>
+				<a href="Vilify-13.github.io/Natrea.htm">Natrea</a>
+				<a href="Vilify-13.github.io/Koze.htm">Koze</a>
+				<a href="Vilify-13.github.io/Thera.htm">Thera</a>
+				<a href="Vilify-13.github.io/Joram.htm">Joram</a>
+				<a href="Vilify-13.github.io/Nilmatar.htm">Nilmatar</a>
+				<a href="Vilify-13.github.io/Laerissa.htm">Laerissa</a>
+				<a href="Vilify-13.github.io/Hequa.htm">Hequa</a>
+				<a href="Vilify-13.github.io/Darmeth.htm">Darmeth</a>
 	</div></header>
 	<div data-id="21" class="card alteration" data-school="Alteration" data-caster="wizard" >
 		<header class="clearfix">
